Cascading Change Log

unreleased

  Added back c.t.Tuple#add( Comparable ) to remain backwards compatible with 1.0.

  Fixed bug preventing Fields.ALL selector in c.p.Every when incoming positions are used instead of field names
  and the given aggregator declares field names.

  Fixed bug that prevented the configured codecs from loading for co-group spills.

  Fixed bug where c.s.TextDelimited would fail on delimiters that are also regex special characters.

  Fixed random j.u.ConcurrentModificationException error when running in Hadoop local mode by synchronizing
  the c.f.s.StackElement#closeTraps method.

  Fixed missing property values when stored in a nested j.u.Properties object.

  Fixed NPE when counter group does not exist yet when querying c.s.FlowStats#getCounterValue.

1.1.1

  Fixed bug where some unsafe operations followed by named c.p.Pipe instances were not considered during planning.

  Removed imports for SLF4J and replaced with Apache LOG4j in c.s.TextDelimited.

  Fixed bug where c.t.Fields.SWAP did not properly resolve when following a c.p.Every pipe.

1.1.0

  Fixed bug where a c.t.Fields instance can be marked as ordered when modified via #set call.

  Changed c.p.CoGroup to detect self-joins and optimize for them.

  Changed trap handling to include failures from source and sink c.t.Tap instances. The source Tap will inherit
  the assembly head trap and the sink will inherit the assembly tail trap.

  Deprecated c.t.Tuple#parse(). It does not properly handle null values or types other than primitives.

  Changed c.f.s.StackElement to log a warning for each trap captured. This includes a truncated print of the offending
  c.t.TupleEntry and the thrown exception and stack trace. Traps being for exceptional cases, logging exceptions is a
  reasonable response.

  Changed map and reduce operation stack so that collected c.t.Tuple instances do not remain 'unmodifiable' after
  being collected via the c.t.TupleEntryCollector.
