@@ -2,6 +2,8 @@ Cascading Change Log
 
 unreleased
 
+  Fixed bug where if null was passed to c.s.TextLine sinkCompression, the behavior would be undefined.
+
   Added back c.t.Tuple#add( Comparable ) to remain backwards compatible with 1.0.
 
   Fixed bug preventing Fields.ALL selector in c.p.Every when incoming positions are used instead of field names
